--- a/flask/templates/greetings.html
+++ b/flask/templates/greetings.html
@@ -8,7 +8,11 @@
         </ul> <div/>
         {% endfor %}
         <hr>
-        <p style="font-size:40px">This is a website for choosing random numbers and<br>
+        <p style="font-size:40px">This is a website for
            finding out what movies and TV shows a person has acted in</p>
+           <h5>Information is acquired from <a href="https://www.imdb.com/">IMDB.com</a></h5>
+           <p style="font-size:18px">This site uses <a href="https://cinemagoer.readthedocs.io/en/latest/index.html">Cinemagoer</a>
+             which is a python library for accessing data from IMDb</p>
+           <img height=400 width=600 src="/static/imdb1.png">
 
 {% endblock %}
